# smallcity

./: Cargo.toml  README.markdown  ideas.markdown  wishlist.markdown
src/: game.rs  main.rs
