[package]

name = "smallcity"
version = "0.0.0"
authors = ["Jonas Hietala <mail@jonashietala.se>"]

[dependencies.sprite]

git = "https://github.com/pistondevelopers/sprite"

[dependencies.sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston/"
