[package]

name = "smallcity"
version = "0.0.0"
authors = ["Jonas Hietala <mail@jonashietala.se>"]

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston/"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.piston2d-sprite]
git = "https://github.com/pistondevelopers/sprite"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.piston-ai_behavior]
git = "https://github.com/PistonDevelopers/ai_behavior"

[dependencies.shader_version]
git = "https://github.com/pistondevelopers/shader_version"

